@@ -736,18 +736,18 @@ like *STACK-TOP-HINT* and unsupported stuff like *TRACED-FUN-LIST*."
                ;; package extensions
                ;;
                ;; locks
-               #!+sb-package-locks("PACKAGE-LOCKED-P"
-                                   "LOCK-PACKAGE"
-                                   "UNLOCK-PACKAGE"
-                                   "PACKAGE-IMPLEMENTED-BY-LIST"
-                                   "PACKAGE-IMPLEMENTS-LIST"
-                                   "ADD-IMPLEMENTATION-PACKAGE"
-                                   "REMOVE-IMPLEMENTATION-PACKAGE"
-                                   "WITH-UNLOCKED-PACKAGES"
-                                   "PACKAGE-LOCK-VIOLATION"
-                                   "PACKAGE-LOCKED-ERROR"
-                                   "SYMBOL-PACKAGE-LOCKED-ERROR"
-                                   "PACKAGE-LOCKED-ERROR-SYMBOL")
+               ("PACKAGE-LOCKED-P"
+                "LOCK-PACKAGE"
+                "UNLOCK-PACKAGE"
+                "PACKAGE-IMPLEMENTED-BY-LIST"
+                "PACKAGE-IMPLEMENTS-LIST"
+                "ADD-IMPLEMENTATION-PACKAGE"
+                "REMOVE-IMPLEMENTATION-PACKAGE"
+                "WITH-UNLOCKED-PACKAGES"
+                "PACKAGE-LOCK-VIOLATION"
+                "PACKAGE-LOCKED-ERROR"
+                "SYMBOL-PACKAGE-LOCKED-ERROR"
+                "PACKAGE-LOCKED-ERROR-SYMBOL")
                "WITHOUT-PACKAGE-LOCKS"
                "DISABLE-PACKAGE-LOCKS"
                "ENABLE-PACKAGE-LOCKS"
