@@ -25,10 +25,6 @@
 
 (defmacro with-single-package-locked-error ((&optional kind thing &rest format)
                                             &body body)
-  #!-sb-package-locks (declare (ignore kind thing format))
-  #!-sb-package-locks
-  `(progn ,@body)
-  #!+sb-package-locks
   (with-unique-names (topmost)
     `(progn
        (let ((,topmost nil))
@@ -55,5 +51,5 @@
 (defmacro without-package-locks (&body body)
   "Ignores all runtime package lock violations during the execution of
 body. Body can begin with declarations."
-  `(let (#!+sb-package-locks (*ignored-package-locks* t))
+  `(let ((*ignored-package-locks* t))
     ,@body))
