@@ -1,6 +1,9 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
 changes relative to sbcl-1.4.4:
+  * minor incompatible change: building with/without the :sb-package-locks
+    feature is no longer an option. Package locks are always compiled in,
+    and removing :sb-package-locks from *features* will have no effect.
   * enhancement: FIND-PACKAGE does not acquire a mutex
   * enhancement: cheneygc can perform heap relocation on startup
   * enhancement: in threaded builds, finalizers execute in a system-internal
